force-app/main/default/objects/Training_User_Provisioning__c/Training_User_Provisioning__c.object-meta.xml
<CustomObject>
    <description>Training User Provisioning</description>
    <label>Training User Provisioning</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training User Provisionings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>