force-app/main/default/objects/Training_User_Provisioning__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Email of the participent attends the training</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>