force-app/main/default/objects/Training_User_Provisioning__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <inlineHelpText>Salesforce environment where the training is provisioned</inlineHelpText>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>MiBos</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>