force-app/main/default/objects/Training_User_Provisioning__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the trainee</description>
    <inlineHelpText>First Name of the trainee</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>