force-app/main/default/objects/Training_User_Provisioning__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of trainee</description>
    <inlineHelpText>Last Name of trainee</inlineHelpText>
    <label>Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>