force-app/main/default/objects/Training_User_Provisioning__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores user id</description>
    <inlineHelpText>Select user whose access you want to replicate for the trainee in the testing environment</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TUPs</relationshipName>
    <type>Lookup</type>
</CustomField>