force-app/main/default/objects/Training_User_Provisioning__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <formula>First_Name__c &amp;  Last_Name__c &amp; Name &amp; &quot;@omnitracs.com.&quot; &amp;  LOWER(Text(Environment__c))</formula>
    <label>Username</label>
    <type>Text</type>
</CustomField>