force-app/main/default/objects/Training_User_Provisioning__c/listViews/All_Provisiongs.listView-meta.xml
<ListView>
    <fullName>All_Provisiongs</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Provisiongs</label>
    <language>en_US</language>
</ListView>